samples/_failures_safe/1761434740_1718a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a2a7bc2.c: In function ‘main’:
./samples/SAFE/__tmp_0a2a7bc2.c:161:25: error: missing terminating " character
  161 |         fprintf(stderr, "Error writing decompressed
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0a2a7bc2.c:161:9: error: expected expression at end of input
  161 |         fprintf(stderr, "Error writing decompressed
      |         ^~~~~~~
./samples/SAFE/__tmp_0a2a7bc2.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0a2a7bc2.c:161:9: error: expected declaration or statement at end of input
